--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ canonifyURLs = true
 
 [params]
   author = "Baishen"
-  description = "Baishen's Personal Hugo Site"
+  description = "Baishen Personal Site, focus on Distributed System, Database, Computational Advertising, Golang, Rust ..."
   googleAnalyticsId = "UA-143445286-1"
 
 [params.assets]
